<resources>
    <string name="app_name">3_9</string>
    <string name="mensaje">Mensaje</string>
    <string name="_3_botones">3 Botones</string>
    <string name="lista">Lista</string>
    <string name="selecion_unica">Selecion unica</string>
    <string name="seleccion_multiple">Seleccion multiple</string>
    <string name="personalizado">Personalizado</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
</resources>